kfreebsd-7 (7.1~cvs20080707-1) EXPERIMENTAL; urgency=low

  [ Petr Salinger ]
  * New upstream snapshot of RELENG_7
     - update of some patches
     - refresh remaining patches
     - 030_abi_cld.diff and 000_tcp.diff applied upstream

  [ Aurelien Jarno ]
  * Build by gcc-4.3

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 30 Jun 2008 11:11:11 +0200

kfreebsd-7 (7.0-3) unstable; urgency=medium

  * Fix tcp options padding (FreeBSD-EN-08:02.tcp).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Jun 2008 10:44:25 +0200

kfreebsd-7 (7.0-2) unstable; urgency=low

  * 030_abi_cld.diff: new patch to clear the direction flag before calling
    a signal handler (Closes: bug#469565).
  * Fix debian/copyright.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 06 Mar 2008 01:17:26 +0100

kfreebsd-7 (7.0-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_7_0_0_RELEASE)
     - update of some patches

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Feb 2008 21:10:03 +0100

kfreebsd-7 (7.0~cvs20080107-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream snapshot (RELENG_7_0)
  * Disable non-free "hptrr" driver - another Highpoint RocketRAID

  [ Aurelien Jarno ]
  * Refresh all patches.
  * Bumped Standards-Version to 3.7.3 (no changes). 

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Jan 2008 11:48:14 +0100

kfreebsd-7 (7.0~cvs20071209-1) experimental; urgency=low

  [ Petr Salinger ]
  * New upstream snapshot of RELENG_7
     - update of some patches
  * Reorder freebsd6-buildutils and freebsd7-buildutils in Build-Depends
  * Add build-dependency on quilt, and use quilt in debian/rules
  * arch/i386/586.config and arch/i386/586-smp.config: also support i686 CPU.
  * Changed building rules to be correctly buildable with current binutils
     - add 020_linker.diff and gen-ld-u-options
     - extend 912_binutils.diff

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 09 Dec 2007 00:41:25 +0100
