@@ -1,5 +1,0 @@
-# Kernel for Debian GNU/kFreeBSD on all x86-64 machines
-
-include		GENERIC
-cpu		HAMMER
-ident		Debian-amd64-generic
