@@ -1,6 +1,0 @@
-# Kernel for Debian GNU/kFreeBSD on AMD64 K8 machines
-
-include		GENERIC
-cpu		HAMMER
-makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=k8"
-ident		Debian-amd64-k8
