@@ -1,0 +1,8 @@
+# Kernel for Debian GNU/kFreeBSD on all x86-64 machines
+
+include		GENERIC
+cpu		HAMMER
+ident		Debian-amd64
+
+options		SMP		# Symmetric MultiProcessor Kernel
+options		ALTQ_NOPCC	# Required for SMP build
