@@ -1,9 +1,0 @@
-# Kernel for Debian GNU/kFreeBSD on Intel em64t P4 SMP machines
-
-include		GENERIC
-cpu		HAMMER
-makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=nocona"
-ident		Debian-em64t-p4-SMP
-
-options		SMP		# Symmetric MultiProcessor Kernel
-options		ALTQ_NOPCC	# Required for SMP build
