@@ -1,6 +1,0 @@
-# Kernel for Debian GNU/kFreeBSD on Intel em64t P4 machines
-
-include		GENERIC
-cpu		HAMMER
-makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=nocona"
-ident		Debian-em64t-p4
