@@ -4,7 +4,7 @@ include		GENERIC
 cpu		I486_CPU
 cpu		I586_CPU
 cpu		I686_CPU
-makeoptions	COPTFLAGS="-Os -frename-registers -pipe -march=i486"
+makeoptions	COPTFLAGS="-Os -frename-registers -pipe -march=i486 -mtune=i486"
 ident		Debian-i486
 
 # Xbox support
