@@ -1,7 +1,0 @@
-# Kernel for Debian GNU/kFreeBSD on an i586 machine
-
-include		GENERIC
-cpu		I586_CPU
-cpu		I686_CPU
-makeoptions	COPTFLAGS="-Os -frename-registers -pipe -march=i586"
-ident		Debian-i586
