@@ -2,7 +2,7 @@
 
 include		GENERIC
 cpu		I686_CPU
-makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=i686"
+makeoptions	COPTFLAGS="-O2 -frename-registers -pipe -march=i686 -mtune=default"
 ident		Debian-i686-SMP
 
 options		SMP		# Symmetric MultiProcessor Kernel
