@@ -1,0 +1,9 @@
+Package: kfreebsd-image-@major@-@flavor@
+Architecture: kfreebsd-@arch@
+Section: base
+Depends: kfreebsd-image-@major@-@compatflavor@
+Description: kernel of FreeBSD @major@ image (transitional package)
+ This package used to depend on the latest binary image for kernel 
+ of FreeBSD @major@ on @flavor@-class machines. Now it is only empty 
+ package to facilitate upgrades, can be safely removed.
+  
