@@ -5,6 +5,7 @@ kfreebsd-7 (7.1~cvs20080707-1) EXPERIMENTAL; urgency=low
      - update of some patches
      - refresh remaining patches
      - 030_abi_cld.diff and 000_tcp.diff applied upstream
+  * Reduce number of kernel-image flavours
 
   [ Aurelien Jarno ]
   * Build by gcc-4.3
